--- a/production/etc/nginx/sites-available/3compute.org
+++ b/production/etc/nginx/sites-available/3compute.org
@@ -40,6 +40,11 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+    # Allow larger uploads (default is 1m)
+    client_max_body_size 256m;
+    # Increase timeouts for large uploads
+    client_body_timeout 600s;
+
     location / {
         proxy_pass http://127.0.0.1:5555;
         proxy_http_version 1.1;
@@ -47,5 +52,9 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        # Stream request body to upstream without buffering to disk for large multipart forms
+        proxy_request_buffering off;
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
     }
 }
